fix svg on mobile

--- a/src/components/SortProducts/SortProduct.module.scss
+++ b/src/components/SortProducts/SortProduct.module.scss
@@ -53,6 +53,7 @@
   border-radius: 0.8rem;
 
   & svg {
+    pointer-events: none;
     position: absolute;
     width: 1.6rem;
     height: 1.6rem;
